--- a/SO/app/modules/mobile-menu/mobile-menu.pug
+++ b/SO/app/modules/mobile-menu/mobile-menu.pug
@@ -73,6 +73,10 @@ nav.mobile-menu
 				li
 					a(href="#", data-izimodal-open=".modal-success-recovery-password") Успешное восст. пароля
 				li
+					a(href="#", data-izimodal-open=".modal-registration") Регистрация
+				li
+					a(href="#", data-izimodal-open=".modal-sing-in") Авторизация
+				li
 					a(href="#", data-izimodal-open=".modal-thanks") Спасибо
 				li
 					a(href="#", data-izimodal-open=".modal-remove-address-question") Удалить адрес?
