--- a/SO/app/pages/personal-area/content/_content.sass
+++ b/SO/app/pages/personal-area/content/_content.sass
@@ -215,12 +215,14 @@
 				padding: 0 12px
 
 		.form-change-password
+			margin-bottom: 0 !important
+			padding-bottom: 0 !important
+			border-bottom: none
 			&_title
 				margin-bottom: 30px
 				display: block
 
-		.data-information-social
-			padding-bottom: 40px
+		
 
 	.personal-data-address
 		.list-saved-address
@@ -696,7 +698,7 @@
 							display: block
 							margin-top: 20px
 
-							.result-price
+							.result-priceF
 								font-size: 20px
 								line-height: 28px
 
