--- a/SO/app/pages/personal-area/content/content.pug
+++ b/SO/app/pages/personal-area/content/content.pug
@@ -571,23 +571,23 @@
 					button(type="submit").btn.btn-dark Изменить пароль
 
 
-		.data-information-social.wrap-social-circle
-			span.h-3.text-fw-medium Социальные сети
+		//- .data-information-social.wrap-social-circle
+		//- 	span.h-3.text-fw-medium Социальные сети
 
-			p.text-medium.social-circle-subtext Нажмите на значок социальной сети, чтобы<br> связать ее с личным кабинетом
+		//- 	p.text-medium.social-circle-subtext Нажмите на значок социальной сети, чтобы<br> связать ее с личным кабинетом
 
-			.social-circle-row
-				a(href="#").social-fb.social-circle
-					img(src="img/icon-fb-white.svg", alt="")
+		//- 	.social-circle-row
+		//- 		a(href="#").social-fb.social-circle
+		//- 			img(src="img/icon-fb-white.svg", alt="")
 
-				a(href="#").social-vk.social-circle.social-active
-					img(src="img/icon-vk-white.svg", alt="")
+		//- 		a(href="#").social-vk.social-circle.social-active
+		//- 			img(src="img/icon-vk-white.svg", alt="")
 
-				a(href="#").social-inst.social-circle.social-active
-					img(src="img/icon-inst-white.svg", alt="")
+		//- 		a(href="#").social-inst.social-circle.social-active
+		//- 			img(src="img/icon-inst-white.svg", alt="")
 
-				a(href="#").social-g.social-circle
-					img(src="img/icon-google-white.svg", alt="")
+		//- 		a(href="#").social-g.social-circle
+		//- 			img(src="img/icon-google-white.svg", alt="")
 
 
 	.personal-data-address.personal-data-group.tab-content(data-tab-key="address")
