--- a/sivenkov.org/css/styles.css
+++ b/sivenkov.org/css/styles.css
@@ -298,14 +298,26 @@ body.page-fixed {
   -ms-flex-pack: center;
   justify-content: center;
   z-index: 1;
+  height: 24px;
+  width: 74px;
 }
 
 .header-menu-btn_desktop .header-menu-btn__text {
   font-size: 1.5rem;
-  -webkit-transition: .6s all ease;
-  -o-transition: .6s all ease;
-  transition: .6s all ease;
   display: block;
+  overflow: hidden;
+  height: inherit;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .header-menu-btn_desktop:before,
@@ -322,13 +334,13 @@ body.page-fixed {
 .header-menu-btn_desktop:before {
   top: 100%;
   right: 0;
-  border-top: 2px solid #000;
+  border-top: 4px solid #000;
 }
 
 .header-menu-btn_desktop:after {
   bottom: 100%;
   left: 0;
-  border-bottom: 2px solid #000;
+  border-bottom: 4px solid #000;
 }
 
 @-webkit-keyframes btn-animation-top {
@@ -442,108 +454,42 @@ body.page-fixed {
   transition: 0s height ease 0s;
 }
 
-.header-menu-btn {
-  cursor: pointer;
-}
-
-.header-menu-btn_mobile {
-  display: none;
-  width: 40px;
-  height: 40px;
-  position: relative;
-}
-
-.header-menu-btn_mobile.active .header-menu-btn__line {
-  width: 100%;
-  top: 50%;
-}
-
-.header-menu-btn_mobile.active .header-menu-btn__line_first {
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-.header-menu-btn_mobile.active .header-menu-btn__line_second {
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.header-menu-btn_mobile:hover > span {
-  width: 100%;
-}
-
-.header-menu-btn__line {
-  height: 4px;
-  background-color: #000;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-transition: .4s all ease;
-  -o-transition: .4s all ease;
-  transition: .4s all ease;
-  position: absolute;
-  right: 0;
-}
-
-.header-menu-btn__line_first {
-  width: 100%;
-  top: -webkit-calc(50% - 5px);
-  top: calc(50% - 5px);
-}
-
-.header-menu-btn__line_second {
-  width: 75%;
-  top: -webkit-calc(50% + 5px);
-  top: calc(50% + 5px);
-}
-
-.header-menu-btn_desktop {
-  position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  z-index: 1;
-}
-
-.header-menu-btn_desktop .header-menu-btn__text {
-  font-size: 1.5rem;
-  -webkit-transition: .6s all ease;
-  -o-transition: .6s all ease;
-  transition: .6s all ease;
-  display: block;
-}
-
-.header-menu-btn_desktop:before,
-.header-menu-btn_desktop:after {
-  content: '';
-  position: absolute;
-  background-color: #fff;
+.header-menu-btn_desktop.active-hide .header-menu-btn__text {
+  -webkit-transition: .2s height ease .4s;
+  -o-transition: .2s height ease .4s;
+  transition: .2s height ease .4s;
   height: 0;
-  width: 0;
-  opacity: 1;
-  z-index: 1;
 }
 
-.header-menu-btn_desktop:before {
-  top: 100%;
-  right: 0;
-  border-top: 2px solid #000;
+.header-menu-btn_desktop.active-hide:before,
+.header-menu-btn_desktop.active-hide:after {
+  width: 100%;
+  border-color: #fff;
+  -webkit-transition: 0.3s width cubic-bezier(0.86, 0, 0.07, 1), 0.3s top cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s bottom cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s height cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s left cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s right cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s border-color cubic-bezier(0.86, 0, 0.07, 1) 0.5s, 0.6s -webkit-transform cubic-bezier(0.86, 0, 0.07, 1) 0.6s;
+  transition: 0.3s width cubic-bezier(0.86, 0, 0.07, 1), 0.3s top cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s bottom cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s height cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s left cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s right cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s border-color cubic-bezier(0.86, 0, 0.07, 1) 0.5s, 0.6s -webkit-transform cubic-bezier(0.86, 0, 0.07, 1) 0.6s;
+  -o-transition: 0.3s width cubic-bezier(0.86, 0, 0.07, 1), 0.3s top cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s bottom cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s height cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s left cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s right cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.6s transform cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s border-color cubic-bezier(0.86, 0, 0.07, 1) 0.5s;
+  transition: 0.3s width cubic-bezier(0.86, 0, 0.07, 1), 0.3s top cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s bottom cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s height cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s left cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s right cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.6s transform cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s border-color cubic-bezier(0.86, 0, 0.07, 1) 0.5s;
+  transition: 0.3s width cubic-bezier(0.86, 0, 0.07, 1), 0.3s top cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s bottom cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s height cubic-bezier(0.86, 0, 0.07, 1) 0.3s, 0.3s left cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s right cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.6s transform cubic-bezier(0.86, 0, 0.07, 1) 0.6s, 0.3s border-color cubic-bezier(0.86, 0, 0.07, 1) 0.5s, 0.6s -webkit-transform cubic-bezier(0.86, 0, 0.07, 1) 0.6s;
 }
 
-.header-menu-btn_desktop:after {
-  bottom: 100%;
+.header-menu-btn_desktop.active-hide:before {
+  top: -webkit-calc(50% - 2px);
+  top: calc(50% - 2px);
+  -webkit-transform: rotate(-45deg) scale(0.5, 1);
+  -ms-transform: rotate(-45deg) scale(0.5, 1);
+  transform: rotate(-45deg) scale(0.5, 1);
   left: 0;
-  border-bottom: 2px solid #000;
+  right: 0;
+}
+
+.header-menu-btn_desktop.active-hide:after {
+  bottom: -webkit-calc(50% - 2px);
+  bottom: calc(50% - 2px);
+  -webkit-transform: rotate(45deg) scale(0.5, 1);
+  -ms-transform: rotate(45deg) scale(0.5, 1);
+  transform: rotate(45deg) scale(0.5, 1);
+  left: 0;
+  right: 0;
 }
 
 .menu {
@@ -569,9 +515,6 @@ body.page-fixed {
   left: 0;
   z-index: 8;
   background-color: #fff;
-  -webkit-transition: opacity .3s ease, visibility .3s ease;
-  -o-transition: opacity .3s ease, visibility .3s ease;
-  transition: opacity .3s ease, visibility .3s ease;
 }
 
 .menu .contianer {
@@ -959,12 +902,26 @@ body.page-fixed {
   }
 }
 
+.menu {
+  -webkit-transition: opacity .3s ease .4s, visibility .3s ease .4s;
+  -o-transition: opacity .3s ease .4s, visibility .3s ease .4s;
+  transition: opacity .3s ease .4s, visibility .3s ease .4s;
+}
+
+.menu-list,
+.menu-info,
+.menu-social {
+  -webkit-transition: 0s all ease .5s;
+  -o-transition: 0s all ease .5s;
+  transition: 0s all ease .5s;
+}
+
 .header.active .menu {
   opacity: 1;
   visibility: visible;
-  -webkit-transition: opacity .5s ease, visibility .5s ease;
-  -o-transition: opacity .5s ease, visibility .5s ease;
-  transition: opacity .5s ease, visibility .5s ease;
+  -webkit-transition: opacity .5s ease .5s, visibility .5s ease .5s;
+  -o-transition: opacity .5s ease .5s, visibility .5s ease .5s;
+  transition: opacity .5s ease .5s, visibility .5s ease .5s;
 }
 
 .header.active .menu-list,
@@ -974,27 +931,27 @@ body.page-fixed {
 }
 
 .header.active .menu-list {
-  -webkit-transition: .9s all ease;
-  -o-transition: .9s all ease;
-  transition: .9s all ease;
+  -webkit-transition: .9s all ease .5s;
+  -o-transition: .9s all ease .5s;
+  transition: .9s all ease .5s;
   -webkit-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
   transform: translate(0, 0);
 }
 
 .header.active .menu-info {
-  -webkit-transition: .9s all ease .2s;
-  -o-transition: .9s all ease .2s;
-  transition: .9s all ease .2s;
+  -webkit-transition: .9s all ease .7s;
+  -o-transition: .9s all ease .7s;
+  transition: .9s all ease .7s;
   -webkit-transform: translate(0, 0);
   -ms-transform: translate(0, 0);
   transform: translate(0, 0);
 }
 
 .header.active .menu-social {
-  -webkit-transition: .9s all ease .4s;
-  -o-transition: .9s all ease .4s;
-  transition: .9s all ease .4s;
+  -webkit-transition: .9s all ease .9s;
+  -o-transition: .9s all ease .9s;
+  transition: .9s all ease .9s;
   -webkit-transform: translate(-50%, 0);
   -ms-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
@@ -1141,17 +1098,6 @@ textarea:required:invalid {
 @media (max-width: 992px) {
   body {
     padding-top: 70px;
-  }
-
-  .header-menu-btn_mobile {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-  }
-
-  .header-menu-btn_desktop {
-    display: none;
   }
 
   .header-menu-btn_mobile {
