--- a/sivenkov.org/css/styles.css
+++ b/sivenkov.org/css/styles.css
@@ -341,10 +341,11 @@ body.page-fixed {
 
 .header.scroll {
   position: fixed;
-  top: 0;
+  top: auto;
+  bottom: 100%;
   background-color: #fff;
-  -webkit-transform: translate3d(0, -100%, 0);
-  transform: translate3d(0, -100%, 0);
+  -webkit-transform: translate3d(0, 0%, 0);
+  transform: translate3d(0, 0%, 0);
   -webkit-transition: 0.6s height ease 0.35s, 0.6s -webkit-transform ease, 0.6s -webkit-box-shadow ease;
   transition: 0.6s height ease 0.35s, 0.6s -webkit-transform ease, 0.6s -webkit-box-shadow ease;
   -o-transition: 0.6s height ease 0.35s, 0.6s transform ease, 0.6s box-shadow ease;
@@ -357,8 +358,8 @@ body.page-fixed {
 }
 
 .header.scroll-show {
-  -webkit-transform: translate3d(0, 0%, 0);
-  transform: translate3d(0, 0%, 0);
+  -webkit-transform: translate3d(0, 100%, 0);
+  transform: translate3d(0, 100%, 0);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
