--- a/sivenkov.org/css/styles.css
+++ b/sivenkov.org/css/styles.css
@@ -22,6 +22,7 @@ body {
   position: relative;
   line-height: 24px;
   color: #000;
+  height: 2000px;
   font-family: "Montserrat-Regular";
   padding-top: 100px;
 }
@@ -986,7 +987,12 @@ body.page-fixed {
     filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0));
   }
 
-  50% {
+  30% {
+    -webkit-filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0.4));
+    filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0.4));
+  }
+
+  70% {
     -webkit-filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0.4));
     filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0.4));
   }
@@ -1003,7 +1009,12 @@ body.page-fixed {
     filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0));
   }
 
-  50% {
+  30% {
+    -webkit-filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0.4));
+    filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0.4));
+  }
+
+  70% {
     -webkit-filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0.4));
     filter: drop-shadow(0px 4px 50px rgba(255, 255, 255, 0.4));
   }
