--- a/sivenkov-landing/css/styles.css
+++ b/sivenkov-landing/css/styles.css
@@ -1,6 +1,6 @@
 .container {
   margin: 0 auto;
-  padding: 0 75px;
+  padding: 0 70px;
   width: 100%;
   max-width: 1600px;
 }
@@ -944,6 +944,11 @@ textarea:required:invalid {
   width: 100%;
   color: #000;
   font-family: "Montserrat-Medium";
+  min-height: 41px;
+}
+
+.form__field_area {
+  line-height: 2.66667rem;
 }
 
 .form__placeholder {
@@ -1017,7 +1022,7 @@ textarea:required:invalid {
 .our-plus__love {
   -webkit-animation: animationLove 1.5s ease infinite;
   animation: animationLove 1.5s ease infinite;
-  width: 55px;
+  width: 50px;
 }
 
 .our-plus__list {
@@ -1112,7 +1117,7 @@ textarea:required:invalid {
 }
 
 .services-list__item {
-  margin-bottom: 4.0625rem;
+  margin-bottom: 4.375rem;
   display: block;
 }
 
@@ -1122,7 +1127,7 @@ textarea:required:invalid {
 
 .services-list__title {
   display: block;
-  margin-bottom: 1.125rem;
+  margin-bottom: 1.5rem;
 }
 
 .portfolio .container {
@@ -1252,7 +1257,7 @@ textarea:required:invalid {
   }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1439px) {
   html,
   body {
     font-size: 14px;
@@ -1571,7 +1576,7 @@ textarea:required:invalid {
 
   .btn {
     font-size: 18px;
-    padding: 1.1em 1.7em;
+    padding: 1.1em 2em;
   }
 
   .page__title {
