--- a/sivenkov-landing/css/styles.css
+++ b/sivenkov-landing/css/styles.css
@@ -266,6 +266,7 @@ footer {
   background-color: rgba(255, 255, 255, 0.65);
   font-size: 16px;
   z-index: 99;
+  display: none;
 }
 
 .popup__content {
